# OpenCast

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  commentary_model_client.py  create_dataset.ipynb  generate_synthetic_for_tts.ipynb  generate_synthetic_for_tts_structured.ipynb  gradio_demo.py  live_commentary_bridge.py  openai_speech_client.py  opencast_audio.py  opencast_bootstrap.py  pyproject.toml  quantize.ipynb  run_commentary_bridge.sh  run_gradio_demo.sh  run_tts_server.sh  setup_commentary_model_runner.sh  setup_host_env.sh  smoke_test_commentary_bridge.sh  smoke_test_qwen3_tts.sh  speaker_embedding_interpolation.py  streaming_speech_client.py  test_2026-04-12-15_52_24.jsonl  test_2026-04-12-16_13_53.jsonl  train_cuda.ipynb
Presentation/: OpenCast.pptx  gsi_received_latest.json
deployment/: .gitattributes  .gitignore  README.md
do_not_touch/: june.m4a
gold_rows/: training_wrapper_pretty_filled_inferno_mixed_gold_conversations_revised.jsonl  training_wrapper_pretty_filled_live_dust2_gold.jsonl  training_wrapper_pretty_filled_live_dust2_gold_revised_events_deduped_conversations_revised.jsonl  training_wrapper_pretty_filled_live_dust2_team_gold.jsonl  training_wrapper_pretty_filled_live_dust2_team_gold_controlled_variation_conversations_revised.jsonl  training_wrapper_pretty_filled_offline_spectate_dust2_gold.jsonl
prototype/: .gitignore  README.md
synthetic data/: test.jsonl  test_2026-04-15-22_19_30.jsonl  test_canonical.jsonl  train_2026-04-15-22_16_20.jsonl  train_2026-04-15-22_16_20_messages.jsonl  valid_canonical.jsonl  (+3 more)
(+320 files in other folders)
