[project]
name = "opencast-qwen3-tts"
version = "0.1.0"
description = "Local helpers and automations for Qwen3-TTS via vLLM-Omni."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "gradio>=5.0,<6",
    "httpx>=0.28,<1",
    "numpy>=2.0,<3",
    "soundfile>=0.13,<1",
    "uvicorn>=0.35,<1",
    "websockets>=15,<16",
]

[tool.uv]
package = false
